<resources>
    <string name="app_name">tbtx_android</string>

    <string name="title_recycler_activity">我在Activity</string>

    <string name="host_url">http://wsd-fe.bl99w.com/</string>

    <string name="cancel">取消</string>
    <!--tab-->
    <string name="home">首页</string>
    <string name="msg">消息</string>
    <string name="share">分享</string>
    <string name="user">我的</string>

    <!--title-->
    <string name="title_empty"></string>
    <string name="title_photo_detail">详情</string>
    <string name="title_login">登陆</string>
    <string name="title_home">童班童学</string>
    <string name="title_album">相册</string>
    <string name="title_add_album">添加相册</string>
    <string name="title_edit_album">编辑相册</string>
    <string name="title_video">请选择</string>

    <!--相册-->
    <string name="class_album">班级相册</string>
    <string name="kindergarten_album">园区相册</string>

    <!--相册 popup-->
    <string name="name_search">按名字搜索</string>
    <string name="time_search">按时间搜索</string>
    <string name="add_album">新建相册</string>


    <string name="more">加载中</string>
    <string name="quality_hd">高清</string>
    <string name="quality_balanced">均衡</string>
    <string name="quality_flunet">流畅</string>
    <string name="ptz">云台</string>
    <string name="talk">对讲</string>
    <string name="capture">截图</string>
    <string name="record">录像</string>
    <string name="close_camera_lens">镜头遮蔽</string>
    <string name="open_camera_lens">镜头开启</string>
    <string name="camera_lens_closed">镜头遮蔽中</string>
    <string name="camera_lens_closing">正在遮蔽镜头...</string>
    <string name="camera_lens_opening">正在取消遮蔽...</string>
    <string name="close_source_localization">听声辨位关闭</string>
    <string name="open_source_localization">听声辨位开启</string>
    <string name="loading_text_default">加载中，请稍候</string>
    <string name="realplay_no_encrypt_password_error">视频已加密，播放失败</string>
    <string name="readed">已读</string>
    <string name="source_detection_off">OFF</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="get_sms_code_fail">获取短信验证码失败</string>
    <string name="secure_validatee_fail">安全验证失败</string>
    <string name="secure_validate_success">安全验证成功</string>
    <string name="secure_validate">硬件安全验证</string>
    <string name="submit_secure_validate">提交安全验证</string>
    <string name="please_input_phonenumber_txt">请输入手机号码</string>
    <string name="get_sms_code">获取短信验证码</string>
    <string name="sms_verify_code_received">请输入您收到的手机验证码</string>
    <string name="please_input_phone_txt">请输入手机号码开通萤石云服务：/n（若对流程不清楚，请阅读《私有云账户对接流程》）</string>
    <string name="open_ys_service">开通萤石云服务</string>
    <string name="open_ys_service_success">开通萤石云服务成功</string>
    <string name="open_ys_service_fail">开通萤石云服务失败</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="start_voice_talk">正在发起对讲</string>
    <string name="realplay_full_talk_start_tip">你可以开始说话了</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="setting_video_level">正在设置画面质量…</string>
    <string name="press_to_talk_release_to_listen">按住说话\n松开收听</string>
    <string name="talking">对讲中…</string>
    <string name="remoteplayback_SDCard_disable_use">存储卡不可用</string>
    <string name="remoteplayback_record_fail_for_memory">录像中断,存储空间已满</string>
    <string name="already_saved_to_volume">已保存至相册</string>
    <string name="remoteplayback_capture_fail_for_memory">抓图失败,存储空间已满</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_encrypt_password_error_message">您的视频已加密，请输入密码进行查看，初始密码为机身标签上的验证码，如果没有验证码，请输入ABCDEF（密码区分大小写）</string>
    <string name="realplay_password_error_title">请输入设备密码</string>
    <string name="realplay_password_error_message1">初始密码为12345，若密码已被修改，请输入修改后的密码</string>
    <string name="realplay_password_error_message3">您的设备版本过低，需要输入设备密码，建议您升级设备</string>
    <string name="camera_lens_too_busy">镜头转动中，请稍候</string>
    <string name="ptz_is_preseting">镜头转动中，请稍候</string>
    <string name="ptz_control_timeout_cruise_track_failed">轨迹巡航中，请稍候</string>
    <string name="ptz_preset_invalid_position_failed">当前位置已被删除，请返回刷新</string>
    <string name="ptz_preset_current_position_failed">当前就在这个位置哦</string>
    <string name="ptz_preset_sound_localization_failed">听声辨位中，请稍候</string>
    <string name="ptz_operation_too_frequently">操作太频繁啦，先歇歇吧</string>
    <string name="ptz_preset_exceed_maxnum_failed">已经不能收藏更多了</string>
    <string name="ptz_privacying_failed">镜头已遮蔽，无法操作云台</string>
    <string name="ptz_mirroring_failed">语音对讲中，无法操作云台</string>
    <string name="ptz_operation_failed">操作失败</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_play_talkback_request_timeout">请求超时，对讲已关闭</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="realplay_play_talkback_network_exception">网络异常，对讲已关闭</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_set_fail_status">视频播放失败，设备已开启隐私保护</string>
    <string name="realplay_share_time_over">分享已结束，下回再见~</string>
    <string name="realplay_share_no_permission">已经停止分享</string>
    <string name="realplay_no_permission">无预览权限</string>
    <string name="realplay_play_no_video_source">没有视频源</string>
    <string name="device_password_is_null">设备密码不能为空</string>
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="realplay_password_error_message4">视频已加密，请联系分享者获取密码进行查看（密码区分大小写）</string>
    <string name="remoteplayback_record_fail">录像失败</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
