<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_transparent">

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_name_search"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_radius_album_search_button_bg"
            android:textColor="@color/blue_font_text"
            android:text="@string/name_search"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_time_search"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_radius_album_search_button_bg"
            android:text="@string/time_search"
            android:textColor="@color/blue_font_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_create_album"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_radius_album_search_button_bg"
            android:text="@string/add_album"
            android:textColor="@color/blue_font_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_radius_album_search_button_bg"
            android:textColor="@color/blue_font_text"
            android:text="@string/cancel"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>